# jenkins-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  tox.toml
mcp_server/: main.py
mcp_server/libs/: jenkins_api.py
mcp_server/tests/: __init__.py  conftest.py  test_jenkins_api.py  test_main.py
